import React from 'react'
import {shallow} from 'enzyme'
import ExpenseSummary from '../../components/ExpenseSummary'

test('should render Summary of 1 expense', ()=>{
    const wrapper = shallow(<ExpenseSummary expenseCount = {1} expenseTotal = {5000}/>)
    expect(wrapper).toMatchSnapshot()
})

test('should render Summary of 2 expenses', ()=>{
    const wrapper = shallow(<ExpenseSummary expenseCount = {2} expenseTotal = {10000}/>)
    expect(wrapper).toMatchSnapshot()
})