// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render Summary of 1 expense 1`] = `
<div>
  <h1>
    Your total amount of 
    1
     
    expense
     
    is
     
    $50.00
  </h1>
</div>
`;

exports[`should render Summary of 2 expenses 1`] = `
<div>
  <h1>
    Your total amount of 
    2
     
    expenses
     
    are
     
    $100.00
  </h1>
</div>
`;
